`Refactored code for admin dashboard, added new features and fixed bugs`

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,13 @@
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "*"
+</IfModule>
+
+<Directory "C:/xampp/htdocs/SPK_Kosan/public/storage">
+    Options Indexes FollowSymLinks
+    AllowOverride All
+    Require all granted
+</Directory>
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
